--- a/index_style.css
+++ b/index_style.css
@@ -14,6 +14,7 @@
 
 #content {
     width: 30cm;
+    margin: 0 10px;
 }
 
 #filter-div {
@@ -159,6 +160,6 @@ div.selected {
     font-size: 16px;
     font-family: sans-serif;
     text-align: right;
-    
+
     white-space: nowrap;
 }
