--- a/index_mobile_style.css
+++ b/index_mobile_style.css
@@ -41,7 +41,7 @@
     
     .accommodation-capacity {
         font-size: 12px;
-        margin: 5px 0;
+        margin: 10px 0;
     }
     
     .accommodation-new-label-div {
@@ -61,9 +61,8 @@
     }
     
     .accommodation-pricing-table {
-        position: relative;
         padding: 0 5px 5px 0;
-        margin-left: auto;
+        margin: 10px;
     }
     
     .accommodation-pricingInfo {
