--- a/index_style.css
+++ b/index_style.css
@@ -28,6 +28,12 @@
     margin-left: 50px;
 }
 
+#other-selection {
+    display: flex;
+    overflow: scroll;
+    padding-bottom: 5px;
+}
+
 .selection div {
     background-color: #EEEEEE;
     border-radius: 20px;
@@ -66,7 +72,6 @@ div.selected {
 }
 
 #accommodations-div {
-    /*display: inline-block;*/
 }
 
 .accommodation-container {
