--- a/accommodation_details_image_viewer.css
+++ b/accommodation_details_image_viewer.css
@@ -9,9 +9,6 @@
 
 #other-images {
     text-align: center;
-/*    border-color: black;*/
-/*    border-style: solid;*/
-/*    border-width: 1px 0 0 0;*/
     padding: 10px;
     /*display: flex;*/
     /*overflow: scroll;*/
@@ -24,12 +21,7 @@
     margin: 10px;
     cursor: pointer;
 }
-@media only screen and (max-width: 480px) {
-    #other-images img {
-        width: 50px;
-        height: 50px;
-    }
-}
+
 #other-images img:hover {
     transform: scale(1.05);
 }
@@ -40,12 +32,29 @@
     display: block;
     margin: 20px auto;
 }
-@media only screen and (max-width: 480px) {
-    #main-image {
-        width: 100%;
-    }
-}
 
 .hidden {
     opacity: 0;
+}
+
+@media only screen and (max-width: 480px) {
+    #other-images img {
+        width: 50px;
+        height: 50px;
+        margin: 5px;
+    }
+    
+    #main-image {
+        width: 100%;
+        height: auto;
+        margin: 10px 0;
+    }
+    
+    #other-images {
+        padding: 0;
+    }
+
+    #other-images img:hover {
+        transform: unset;
+    }
 }
