--- a/accommodation_details_mobile_style.css
+++ b/accommodation_details_mobile_style.css
@@ -128,12 +128,12 @@
     
     #pro-header {
         width: 50%;
-        color: #00FF00;
+        color: #00DD00;
     }
     
     #contra-header {
         width: 50%;
-        color: #FF0000;
+        color: #DD0000;
     }
 
     #bed-info-table td.bed-header {
