--- a/index_mobile_style.css
+++ b/index_mobile_style.css
@@ -23,6 +23,7 @@
         position: relative;
         padding-top: 35px;
         overflow: hidden;
+        transition: unset;
     }
     
     body {
