--- a/index_mobile_style.css
+++ b/index_mobile_style.css
@@ -50,7 +50,7 @@
     }
     
     .accommodation-surrounding-tags {
-        margin: 5px 5px;
+        margin: 5px 0;
     }
 
     .accommodation-surrounding-tags div {
