--- a/accommodation_details_image_viewer.css
+++ b/accommodation_details_image_viewer.css
@@ -18,7 +18,7 @@
     width: 100px;
     height: 100px;
     object-fit: cover;
-    margin: 10px;
+    margin: 5px 10px;
     cursor: pointer;
 }
 
