--- a/accommodation_details_image_viewer.css
+++ b/accommodation_details_image_viewer.css
@@ -9,7 +9,7 @@
 
 #other-images {
     text-align: center;
-    padding: 10px;
+    padding: 0;
     /*display: flex;*/
     /*overflow: scroll;*/
     /*justify-content: center;*/
@@ -18,8 +18,14 @@
     width: 100px;
     height: 100px;
     object-fit: cover;
-    margin: 5px 10px;
+    margin: 15px 10px;
     cursor: pointer;
+}
+
+#other-images img.selected {
+    margin-bottom: 30px;
+    margin-top: 0;
+    transform: scale(1.05);
 }
 
 #other-images img:hover {
@@ -44,6 +50,11 @@
         width: 50px;
         height: 50px;
         margin: 5px;
+    }
+    
+    #other-images img.selected {
+        margin-bottom: 10px;
+        transform: scale(1.05);
     }
     
     #main-image {
