--- a/accommodation_details_style.css
+++ b/accommodation_details_style.css
@@ -6,11 +6,11 @@ body {
 
 .title {
     font-family: sans-serif;
-    margin: 20px 10px 0 10px;
+    margin: 20px 10px 40px 10px;
 }
 
 #image-viewer {
-    margin: 40px 0;
+    margin: 20px 0;
 }
 
 #content {
@@ -26,7 +26,7 @@ body {
     background-color: #EEEEEE;
     border-radius: 20px;
     padding: 20px 50px;
-    margin: 30px 30px;
+    margin: 20px 30px;
     display: flex;
 }
 
