--- a/index_mobile_style.css
+++ b/index_mobile_style.css
@@ -3,11 +3,11 @@
         width: auto;
         overflow-x: hidden;
     }
-    
+
     .title {
         font-size: 25px;
     }
-    
+
     .subtitle {
         font-size: 15px;
     }
@@ -16,26 +16,21 @@
         transform: initial;
         cursor: initial;
     }
-    
+
     .accommodation-container {
-        border-style: none;
-        background-color: #FFFFFF;
+        margin: 10px 10px;
         box-shadow: 0 0 10px 1px #666666;
         position: relative;
         padding-top: 35px;
         overflow: hidden;
         transition: unset;
     }
-    
-    body {
-        background-color: #EEEEEE;
-    }
 
     .accommodation-image {
         width: 100px;
         height: 100px;
     }
-    
+
     .accommodation-name {
         position: absolute;
         left: 0;
@@ -43,12 +38,12 @@
         margin: 7px 10px;
         font-size: 15px;
     }
-    
+
     .accommodation-location {
         font-size: 12px;
         margin: 0;
     }
-    
+
     .accommodation-surrounding-tags {
         margin: 5px 0;
     }
@@ -59,23 +54,24 @@
         height: 10px;
         border-radius: 100%;
         margin: 0 3px;
+        padding: 0;
     }
-    
+
     .accommodation-capacity {
         font-size: 12px;
-        margin: 5px 0;
+        margin: 7px 0;
     }
-    
+
     .accommodation-new-label-div {
         top: 5px;
         right: 5px;
     }
-    
+
     .accommodation-new-label {
         font-size: 12px;
         padding: 6px 8px;
     }
-    
+
     .accommodation-sub-container {
         display: block;
         height: 100px;
@@ -83,33 +79,35 @@
         overflow: hidden;
         position: unset;
     }
-    
+
     .accommodation-info-div {
         margin: 0 10px 0 10px;
     }
-    
+
     .accommodation-pricing-table {
         padding: 0 5px 5px 0;
         margin: 10px;
     }
-    
+
     .accommodation-pricingInfo {
         font-size: 10px;
     }
-    
+
     .accommodation-totalPrice {
         font-size: 15px;
     }
-    
+
     .accommodation-perPersonPricing {
         font-size: 20px;
     }
-    
+
     #filter-div {
-        margin-bottom: 0;
-        margin-left: 10px;
+        margin: 10px 10px 0 10px;
+        background-color: unset;
+        padding: 0;
+        border-radius: 0;
     }
-    
+
     .selection div {
         background-color: #FFFFFF;
         font-size: 12px;
@@ -122,7 +120,7 @@
         transform: initial;
         cursor: initial;
     }
-    
+
     .selection div.selected:hover {
         background-color: #888888;
     }
@@ -132,27 +130,31 @@
         color: #FFFFFF;
     }
     
+    #filter-div {
+        margin-bottom: 15px;
+    }
+
     #filter-div h1 {
         font-size: 20px;
         text-align: center;
     }
-    
+
     #filter-div h2 {
         margin: 0;
         font-size: 15px;
     }
-    
+
     #filter-div table th {
         font-weight: normal;
         font-size: 12px;
         text-align: left;
         padding-left: 20px;
     }
-    
+
     #other-selection {
         margin-left: 0;
     }
-    
+
     #country-filter {
         width: 110px;
     }
@@ -160,7 +162,7 @@
     #country-filter div {
         margin-left: 0;
     }
-    
+
     #surrounding-selection {
         margin-bottom: 5px;
     }
